<resources>
    <string name="text_vietnam" translatable="false">Tiếng Việt</string>
    <string name="text_english" translatable="false">English</string>

    <string name="app_name">WeatherApp</string>
    <string name="ok">ok</string>
    <string name="location_access_required">Location Access Required</string>
    <string name="location_permission_not_available">Location permission not available</string>
    <string name="location_permission_granted">Location permission granted</string>
    <string name="location_permission_denied">Location permission denied</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="img_logo">img_logo</string>
    <string name="today_weather">today weather</string>
    <string name="intro_app">Một ứng dụng thời tiết đẹp và dễ sử dụng</string>
    <string name="hint_name">Nhập tên của bạn và bắt đầu sử dụng</string>
    <string name="set_name_error">Please enter your name</string>


    <!--detail weather-->
    <string name="fell_like">Cảm giác như</string>
    <string name="humidity">Độ ẩm</string>
    <string name="uv_index">Chỉ số UV</string>
    <string name="vision">Tầm nhìn</string>
    <string name="dewpoint">Điểm sương</string>
    <string name="pressure">áp suất</string>
    <string name="detail">Chi tiết</string>
    <string name="seven_day_next">7 ngày tiếp</string>
    <string name="rain_percent">Khả năng mưa</string>
    <string name="air_index">Chỉ số không khí</string>
    <string name="sun">Mặt trời</string>
    <string name="moon">Mặt trăng</string>
    <string name="today">Hôm nay</string>

    <!--    clound status-->
    <string name="cloud_little">Ít Mây</string>
    <string name="cloud_much">Nhiều Mây</string>


    <!--    status weather description-->
    <string name="thunderstorm_rain">Thunderstorm and rain</string>
    <string name="thunderstorm_drizzle">Thunderstorm and drizzle</string>
    <string name="drizzle">Drizzle</string>
    <string name="rain">Rain</string>
    <string name="snow">Snow</string>
    <string name="sleet">Sleet</string>
    <string name="snow_shower">Snow shower</string>
    <string name="flurries">Flurries</string>
    <string name="mist">Mist</string>
    <string name="smoke">Smoke</string>
    <string name="haze">Haze</string>
    <string name="sand_dust">Sand and dust</string>



    <string name="frog">Frog</string>
    <string name="clear_sky">Clear sky sun</string>
    <string name="broken_clounds">Broken clounds</string>
    <string name="overcast_clouds">Overcast clouds</string>
    <string name="unknown_precipitation">Unknown Precipitation</string>
    <string name="north">north</string>
    <string name="north_east">north east</string>
    <string name="east">nast</string>
    <string name="south_east">south east</string>
    <string name="south">south</string>
    <string name="south_west">south west</string>
    <string name="west">west</string>
    <string name="north_west">north west</string>
    <string name="unknow_weather">unknown weather</string>
    <string name="hight">Hight</string>
    <string name="celsius">°C</string>
    <string name="low">low</string>
    <string name="wind">Wind</string>
    <string name="speed">speed</string>
    <string name="km_per_hour">km/h</string>
    <string name="ability_to_rain">Ability to rain</string>
    <string name="north_north_east">north - north east</string>
    <string name="east_north_east">east - north east</string>
    <string name="east_south_east">east - south east</string>
    <string name="south_south_east">south - south east</string>
    <string name="south_south_west">south - south west</string>
    <string name="west_south_west">west - south west</string>
    <string name="west_north_west">west - north west</string>
    <string name="north_north_west">north - north west</string>

</resources>
