<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_16dp"
        android:layout_marginBottom="@dimen/padding_16dp"
        android:text="@string/detail"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView

            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:backgroundTint="@color/item_detail"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_remove_red_eye_white_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_8dp"
                    android:text="@string/fell_like"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tvFeelLike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_8dp"
                    android:text="36°C"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView

            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginLeft="@dimen/padding_8dp"
            android:layout_marginRight="@dimen/padding_8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/item_detail"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_remove_red_eye_white_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_8dp"
                    android:text="@string/humidity"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tvHumidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_8dp"
                    android:text="66%"
                    android:textColor="@android:color/white"

                    android:textSize="24sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView

            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:backgroundTint="@color/item_detail"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_remove_red_eye_white_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_8dp"
                    android:text="@string/uv_index"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tvUVindex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_8dp"
                    android:text="7"
                    android:textColor="@android:color/white"

                    android:textSize="24sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_8dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView

            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:backgroundTint="@color/item_detail"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_remove_red_eye_white_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_8dp"
                    android:text="@string/vision"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tvVision"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_8dp"
                    android:text="5 km"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView

            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginLeft="@dimen/padding_8dp"
            android:layout_marginRight="@dimen/padding_8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/item_detail"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_remove_red_eye_white_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_8dp"
                    android:text="@string/dewpoint"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tvDewpoint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_8dp"
                    android:text="24°C"
                    android:textColor="@android:color/white"

                    android:textSize="24sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView

            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:backgroundTint="@color/item_detail"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_remove_red_eye_white_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_8dp"
                    android:text="@string/pressure"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tvPressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_8dp"
                    android:text="999 mb"
                    android:textColor="@android:color/white"

                    android:textSize="24sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>


</LinearLayout>
